evaluation: add a calculated project to compose env & update notebooks and datasets

--- a/evaluation/Prepare data.ipynb
+++ b/evaluation/Prepare data.ipynb
@@ -5,7 +5,9 @@
    "id": "632d04c9",
    "metadata": {},
    "source": [
-    "# Prepare data\n"
+    "# Prepare data\n",
+    "\n",
+    "Downloads most starred repos from GitHub using GraphQL API. "
    ]
   },
   {
@@ -132,7 +134,6 @@
     "            \"Commits\": node[\"defaultBranchRef\"][\"target\"][\"history\"][\"totalCount\"],\n",
     "            \"Language\": node[\"primaryLanguage\"][\"name\"] if node[\"primaryLanguage\"] is not None else \"None\",\n",
     "            \"Bus Factor\": 0,\n",
-    "            \"Memory\": 0,\n",
     "            \"Time\": 0,\n",
     "        }\n",
     "        github_df.loc[len(github_df)] = new_row\n",
