--- a/evaluation/Run benchmark.ipynb
+++ b/evaluation/Run benchmark.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "35e60422",
+   "metadata": {},
+   "source": [
+    "# Run benchmark\n",
+    "\n",
+    "Loads the dataset and executes the bus factor analysis for each repo 10 times and collects the runtime metrics."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "824a4f75",
    "metadata": {},
    "outputs": [
@@ -32,80 +42,71 @@
        "      <th>Mentionable Users</th>\n",
        "      <th>Commits</th>\n",
        "      <th>Bus Factor</th>\n",
-       "      <th>Memory</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>908.000000</td>\n",
-       "      <td>908.000000</td>\n",
-       "      <td>908.000000</td>\n",
-       "      <td>908.000000</td>\n",
-       "      <td>908.0</td>\n",
-       "      <td>908.0</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>9.430000e+02</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>29422.636564</td>\n",
-       "      <td>134879.270925</td>\n",
-       "      <td>517.128855</td>\n",
-       "      <td>1788.287445</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>29453.748674</td>\n",
+       "      <td>2.209381e+05</td>\n",
+       "      <td>513.545069</td>\n",
+       "      <td>1638.586426</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>26674.378773</td>\n",
-       "      <td>189029.243041</td>\n",
-       "      <td>970.831351</td>\n",
-       "      <td>4548.024352</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>26277.948371</td>\n",
+       "      <td>5.181760e+05</td>\n",
+       "      <td>885.477256</td>\n",
+       "      <td>2396.988686</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>8925.000000</td>\n",
-       "      <td>517.000000</td>\n",
+       "      <td>5.170000e+02</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>100.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>16168.000000</td>\n",
-       "      <td>17433.250000</td>\n",
-       "      <td>122.750000</td>\n",
-       "      <td>274.750000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>16191.500000</td>\n",
+       "      <td>1.898350e+04</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>279.500000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>21460.500000</td>\n",
-       "      <td>57482.000000</td>\n",
-       "      <td>249.000000</td>\n",
-       "      <td>704.500000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>21468.000000</td>\n",
+       "      <td>6.143600e+04</td>\n",
+       "      <td>255.000000</td>\n",
+       "      <td>737.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>32524.500000</td>\n",
-       "      <td>165092.250000</td>\n",
-       "      <td>523.250000</td>\n",
-       "      <td>1815.000000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>32708.500000</td>\n",
+       "      <td>1.981075e+05</td>\n",
+       "      <td>536.500000</td>\n",
+       "      <td>1963.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>367200.000000</td>\n",
-       "      <td>998104.000000</td>\n",
+       "      <td>6.060546e+06</td>\n",
        "      <td>10000.000000</td>\n",
-       "      <td>100489.000000</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>19165.000000</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -113,28 +114,28 @@
        "</div>"
       ],
       "text/plain": [
-       "               Stars           Size  Mentionable Users        Commits   \n",
-       "count     908.000000     908.000000         908.000000     908.000000  \\\n",
-       "mean    29422.636564  134879.270925         517.128855    1788.287445   \n",
-       "std     26674.378773  189029.243041         970.831351    4548.024352   \n",
-       "min      8925.000000     517.000000           1.000000     100.000000   \n",
-       "25%     16168.000000   17433.250000         122.750000     274.750000   \n",
-       "50%     21460.500000   57482.000000         249.000000     704.500000   \n",
-       "75%     32524.500000  165092.250000         523.250000    1815.000000   \n",
-       "max    367200.000000  998104.000000       10000.000000  100489.000000   \n",
+       "               Stars          Size  Mentionable Users       Commits   \n",
+       "count     943.000000  9.430000e+02         943.000000    943.000000  \\\n",
+       "mean    29453.748674  2.209381e+05         513.545069   1638.586426   \n",
+       "std     26277.948371  5.181760e+05         885.477256   2396.988686   \n",
+       "min      8925.000000  5.170000e+02           1.000000    100.000000   \n",
+       "25%     16191.500000  1.898350e+04         126.000000    279.500000   \n",
+       "50%     21468.000000  6.143600e+04         255.000000    737.000000   \n",
+       "75%     32708.500000  1.981075e+05         536.500000   1963.000000   \n",
+       "max    367200.000000  6.060546e+06       10000.000000  19165.000000   \n",
        "\n",
-       "       Bus Factor  Memory  \n",
-       "count       908.0   908.0  \n",
-       "mean          0.0     0.0  \n",
-       "std           0.0     0.0  \n",
-       "min           0.0     0.0  \n",
-       "25%           0.0     0.0  \n",
-       "50%           0.0     0.0  \n",
-       "75%           0.0     0.0  \n",
-       "max           0.0     0.0  "
+       "       Bus Factor  \n",
+       "count       943.0  \n",
+       "mean          0.0  \n",
+       "std           0.0  \n",
+       "min           0.0  \n",
+       "25%           0.0  \n",
+       "50%           0.0  \n",
+       "75%           0.0  \n",
+       "max           0.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,9 +152,9 @@
     "        df[column] = df[column].astype('int')\n",
     "\n",
     "    df = df.drop_duplicates(subset=['Repository'])\n",
-    "    df = df.query('Commits >= 100 & Language != None')\n",
-    "    # Repos less or equal 1Gb size\n",
-    "    df = df.query('Size <= 1000000')\n",
+    "    df = df.query('Commits >= 100 & Language != None & Commits <= 20000')\n",
+    "    # Repos less or equal 10Gb size\n",
+    "    df = df.query('Size <= 10000000')\n",
     "    \n",
     "    # Add columns\n",
     "    df.loc[:, TIME_COLUMN] = 0\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "732f040d",
    "metadata": {},
    "outputs": [
@@ -214,8 +215,8 @@
        "      <td>1277</td>\n",
        "      <td>8307</td>\n",
        "      <td>Dart</td>\n",
-       "      <td>10</td>\n",
-       "      <td>[15543, 16065, 15605, 15026, 14761, 14981, 150...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -225,14 +226,11 @@
        "        Repository                               Clone URL   Stars    Size   \n",
        "5  flutter/flutter  https://github.com/flutter/flutter.git  153561  259459  \\\n",
        "\n",
-       "   Mentionable Users  Commits Language  Bus Factor   \n",
-       "5               1277     8307     Dart          10  \\\n",
-       "\n",
-       "                               Execution time series  \n",
-       "5  [15543, 16065, 15605, 15026, 14761, 14981, 150...  "
+       "   Mentionable Users  Commits Language  Bus Factor Execution time series  \n",
+       "5               1277     8307     Dart           0                   0.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,9 +246,143 @@
     "            df.loc[idx, 'Bus Factor'] = row[\"Bus Factor\"]\n",
     "    return df\n",
     "\n",
-    "df = merge(df, \"data/result.csv\")\n",
-    "df = df.drop('Memory', axis=1)\n",
+    "# df = merge(df, \"data/result.csv\")\n",
     "df.query('Repository == \"flutter/flutter\"')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9bbf4821",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Stars</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Mentionable Users</th>\n",
+       "      <th>Commits</th>\n",
+       "      <th>Bus Factor</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>9.430000e+02</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>29453.748674</td>\n",
+       "      <td>2.209381e+05</td>\n",
+       "      <td>513.545069</td>\n",
+       "      <td>1638.586426</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>26277.948371</td>\n",
+       "      <td>5.181760e+05</td>\n",
+       "      <td>885.477256</td>\n",
+       "      <td>2396.988686</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>8925.000000</td>\n",
+       "      <td>5.170000e+02</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>16191.500000</td>\n",
+       "      <td>1.898350e+04</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>279.500000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>21468.000000</td>\n",
+       "      <td>6.143600e+04</td>\n",
+       "      <td>255.000000</td>\n",
+       "      <td>737.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>32708.500000</td>\n",
+       "      <td>1.981075e+05</td>\n",
+       "      <td>536.500000</td>\n",
+       "      <td>1963.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>367200.000000</td>\n",
+       "      <td>6.060546e+06</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>19165.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Stars          Size  Mentionable Users       Commits   \n",
+       "count     943.000000  9.430000e+02         943.000000    943.000000  \\\n",
+       "mean    29453.748674  2.209381e+05         513.545069   1638.586426   \n",
+       "std     26277.948371  5.181760e+05         885.477256   2396.988686   \n",
+       "min      8925.000000  5.170000e+02           1.000000    100.000000   \n",
+       "25%     16191.500000  1.898350e+04         126.000000    279.500000   \n",
+       "50%     21468.000000  6.143600e+04         255.000000    737.000000   \n",
+       "75%     32708.500000  1.981075e+05         536.500000   1963.000000   \n",
+       "max    367200.000000  6.060546e+06       10000.000000  19165.000000   \n",
+       "\n",
+       "       Bus Factor  \n",
+       "count       943.0  \n",
+       "mean          0.0  \n",
+       "std           0.0  \n",
+       "min           0.0  \n",
+       "25%           0.0  \n",
+       "50%           0.0  \n",
+       "75%           0.0  \n",
+       "max           0.0  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sort_values(by=[\"Commits\"], inplace=True)\n",
+    "df.describe()"
    ]
   },
   {
@@ -271,6 +403,7 @@
     "\n",
     "cnt = 0\n",
     "failed = []\n",
+    "\n",
     "\n",
     "for index, row in df.iterrows():\n",
     "    cnt += 1\n",
@@ -299,7 +432,7 @@
     "\n",
     "        task_is_running = True\n",
     "        while task_is_running:\n",
-    "            time.sleep(5)\n",
+    "            time.sleep(0.5)\n",
     "            status = requests.get(API_BASE_PATH + \"/api/task/events\")\n",
     "            for msg in status.json():\n",
     "                print(msg)\n",
@@ -329,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "5602d278",
    "metadata": {},
    "outputs": [],
@@ -348,14 +481,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(len(failed), failed)\n",
-    "df"
+    "print(len(failed), len(df), failed)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c908eba4",
+   "id": "1b44a890",
    "metadata": {},
    "outputs": [],
    "source": []
