evaluation: replace df with df.describe

--- a/evaluation/Process results.ipynb
+++ b/evaluation/Process results.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ebf8b814",
    "metadata": {},
    "outputs": [
@@ -37,212 +37,105 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Repository</th>\n",
-       "      <th>Clone URL</th>\n",
        "      <th>Stars</th>\n",
        "      <th>Size</th>\n",
        "      <th>Mentionable Users</th>\n",
        "      <th>Commits</th>\n",
-       "      <th>Language</th>\n",
        "      <th>Bus Factor</th>\n",
-       "      <th>Execution time series</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1022</th>\n",
-       "      <td>dianping/cat</td>\n",
-       "      <td>https://github.com/dianping/cat.git</td>\n",
-       "      <td>17756</td>\n",
-       "      <td>114113</td>\n",
-       "      <td>89</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Java</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[790, 381, 271, 273, 264, 268, 249, 245, 257, ...</td>\n",
+       "      <th>count</th>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>9.430000e+02</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.000000</td>\n",
+       "      <td>943.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>353</th>\n",
-       "      <td>CopyTranslator/CopyTranslator</td>\n",
-       "      <td>https://github.com/CopyTranslator/CopyTranslat...</td>\n",
-       "      <td>15715</td>\n",
-       "      <td>10593</td>\n",
-       "      <td>9</td>\n",
-       "      <td>100</td>\n",
-       "      <td>TypeScript</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[196, 177, 185, 184, 176, 176, 182, 200, 177, ...</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>29453.748674</td>\n",
+       "      <td>2.209381e+05</td>\n",
+       "      <td>513.545069</td>\n",
+       "      <td>1638.586426</td>\n",
+       "      <td>2.427359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>79</th>\n",
-       "      <td>vsouza/awesome-ios</td>\n",
-       "      <td>https://github.com/vsouza/awesome-ios.git</td>\n",
-       "      <td>42893</td>\n",
-       "      <td>13400</td>\n",
-       "      <td>870</td>\n",
-       "      <td>101</td>\n",
-       "      <td>Swift</td>\n",
-       "      <td>1</td>\n",
-       "      <td>[170, 149, 146, 142, 139, 161, 145, 164, 161, ...</td>\n",
+       "      <th>std</th>\n",
+       "      <td>26277.948371</td>\n",
+       "      <td>5.181760e+05</td>\n",
+       "      <td>885.477256</td>\n",
+       "      <td>2396.988686</td>\n",
+       "      <td>2.518040</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1640</th>\n",
-       "      <td>Tonejs/Tone.js</td>\n",
-       "      <td>https://github.com/Tonejs/Tone.js.git</td>\n",
-       "      <td>12503</td>\n",
-       "      <td>29377</td>\n",
-       "      <td>92</td>\n",
-       "      <td>101</td>\n",
-       "      <td>TypeScript</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[264, 206, 175, 155, 170, 172, 169, 161, 167, ...</td>\n",
+       "      <th>min</th>\n",
+       "      <td>8925.000000</td>\n",
+       "      <td>5.170000e+02</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>chubin/wttr.in</td>\n",
-       "      <td>https://github.com/chubin/wttr.in.git</td>\n",
-       "      <td>21560</td>\n",
-       "      <td>1638</td>\n",
-       "      <td>164</td>\n",
-       "      <td>101</td>\n",
-       "      <td>Python</td>\n",
-       "      <td>4</td>\n",
-       "      <td>[232, 216, 211, 226, 223, 211, 224, 216, 226, ...</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>16191.500000</td>\n",
+       "      <td>1.898350e+04</td>\n",
+       "      <td>126.000000</td>\n",
+       "      <td>279.500000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>21468.000000</td>\n",
+       "      <td>6.143600e+04</td>\n",
+       "      <td>255.000000</td>\n",
+       "      <td>737.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>elastic/kibana</td>\n",
-       "      <td>https://github.com/elastic/kibana.git</td>\n",
-       "      <td>18476</td>\n",
-       "      <td>5069802</td>\n",
-       "      <td>2329</td>\n",
-       "      <td>15039</td>\n",
-       "      <td>TypeScript</td>\n",
-       "      <td>32</td>\n",
-       "      <td>[42730, 36192, 35728, 36085, 35814, 36004, 356...</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>32708.500000</td>\n",
+       "      <td>1.981075e+05</td>\n",
+       "      <td>536.500000</td>\n",
+       "      <td>1963.000000</td>\n",
+       "      <td>3.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>61</th>\n",
-       "      <td>supabase/supabase</td>\n",
-       "      <td>https://github.com/supabase/supabase.git</td>\n",
-       "      <td>50492</td>\n",
-       "      <td>1112297</td>\n",
-       "      <td>742</td>\n",
-       "      <td>16262</td>\n",
-       "      <td>TypeScript</td>\n",
-       "      <td>3</td>\n",
-       "      <td>[20956, 19657, 19842, 19864, 19656, 19685, 196...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>722</th>\n",
-       "      <td>dotnet/roslyn</td>\n",
-       "      <td>https://github.com/dotnet/roslyn.git</td>\n",
-       "      <td>17397</td>\n",
-       "      <td>1843310</td>\n",
-       "      <td>2568</td>\n",
-       "      <td>17147</td>\n",
-       "      <td>C#</td>\n",
-       "      <td>2</td>\n",
-       "      <td>[24318, 21787, 21555, 21677, 21866, 21734, 217...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>462</th>\n",
-       "      <td>pytorch/pytorch</td>\n",
-       "      <td>https://github.com/pytorch/pytorch.git</td>\n",
-       "      <td>67033</td>\n",
-       "      <td>1317883</td>\n",
-       "      <td>2772</td>\n",
-       "      <td>18515</td>\n",
-       "      <td>Python</td>\n",
-       "      <td>19</td>\n",
-       "      <td>[33719, 33450, 33793, 33891, 33416, 33438, 333...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1264</th>\n",
-       "      <td>microsoft/vscode</td>\n",
-       "      <td>https://github.com/microsoft/vscode.git</td>\n",
-       "      <td>146413</td>\n",
-       "      <td>867603</td>\n",
-       "      <td>1855</td>\n",
-       "      <td>19165</td>\n",
-       "      <td>TypeScript</td>\n",
-       "      <td>6</td>\n",
-       "      <td>[28387, 27583, 27480, 27578, 27523, 27492, 274...</td>\n",
+       "      <th>max</th>\n",
+       "      <td>367200.000000</td>\n",
+       "      <td>6.060546e+06</td>\n",
+       "      <td>10000.000000</td>\n",
+       "      <td>19165.000000</td>\n",
+       "      <td>32.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>943 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         Repository   \n",
-       "1022                   dianping/cat  \\\n",
-       "353   CopyTranslator/CopyTranslator   \n",
-       "79               vsouza/awesome-ios   \n",
-       "1640                 Tonejs/Tone.js   \n",
-       "200                  chubin/wttr.in   \n",
-       "...                             ...   \n",
-       "242                  elastic/kibana   \n",
-       "61                supabase/supabase   \n",
-       "722                   dotnet/roslyn   \n",
-       "462                 pytorch/pytorch   \n",
-       "1264               microsoft/vscode   \n",
+       "               Stars          Size  Mentionable Users       Commits   \n",
+       "count     943.000000  9.430000e+02         943.000000    943.000000  \\\n",
+       "mean    29453.748674  2.209381e+05         513.545069   1638.586426   \n",
+       "std     26277.948371  5.181760e+05         885.477256   2396.988686   \n",
+       "min      8925.000000  5.170000e+02           1.000000    100.000000   \n",
+       "25%     16191.500000  1.898350e+04         126.000000    279.500000   \n",
+       "50%     21468.000000  6.143600e+04         255.000000    737.000000   \n",
+       "75%     32708.500000  1.981075e+05         536.500000   1963.000000   \n",
+       "max    367200.000000  6.060546e+06       10000.000000  19165.000000   \n",
        "\n",
-       "                                              Clone URL   Stars     Size   \n",
-       "1022                https://github.com/dianping/cat.git   17756   114113  \\\n",
-       "353   https://github.com/CopyTranslator/CopyTranslat...   15715    10593   \n",
-       "79            https://github.com/vsouza/awesome-ios.git   42893    13400   \n",
-       "1640              https://github.com/Tonejs/Tone.js.git   12503    29377   \n",
-       "200               https://github.com/chubin/wttr.in.git   21560     1638   \n",
-       "...                                                 ...     ...      ...   \n",
-       "242               https://github.com/elastic/kibana.git   18476  5069802   \n",
-       "61             https://github.com/supabase/supabase.git   50492  1112297   \n",
-       "722                https://github.com/dotnet/roslyn.git   17397  1843310   \n",
-       "462              https://github.com/pytorch/pytorch.git   67033  1317883   \n",
-       "1264            https://github.com/microsoft/vscode.git  146413   867603   \n",
-       "\n",
-       "      Mentionable Users  Commits    Language  Bus Factor   \n",
-       "1022                 89      100        Java           1  \\\n",
-       "353                   9      100  TypeScript           1   \n",
-       "79                  870      101       Swift           1   \n",
-       "1640                 92      101  TypeScript           3   \n",
-       "200                 164      101      Python           4   \n",
-       "...                 ...      ...         ...         ...   \n",
-       "242                2329    15039  TypeScript          32   \n",
-       "61                  742    16262  TypeScript           3   \n",
-       "722                2568    17147          C#           2   \n",
-       "462                2772    18515      Python          19   \n",
-       "1264               1855    19165  TypeScript           6   \n",
-       "\n",
-       "                                  Execution time series  \n",
-       "1022  [790, 381, 271, 273, 264, 268, 249, 245, 257, ...  \n",
-       "353   [196, 177, 185, 184, 176, 176, 182, 200, 177, ...  \n",
-       "79    [170, 149, 146, 142, 139, 161, 145, 164, 161, ...  \n",
-       "1640  [264, 206, 175, 155, 170, 172, 169, 161, 167, ...  \n",
-       "200   [232, 216, 211, 226, 223, 211, 224, 216, 226, ...  \n",
-       "...                                                 ...  \n",
-       "242   [42730, 36192, 35728, 36085, 35814, 36004, 356...  \n",
-       "61    [20956, 19657, 19842, 19864, 19656, 19685, 196...  \n",
-       "722   [24318, 21787, 21555, 21677, 21866, 21734, 217...  \n",
-       "462   [33719, 33450, 33793, 33891, 33416, 33438, 333...  \n",
-       "1264  [28387, 27583, 27480, 27578, 27523, 27492, 274...  \n",
-       "\n",
-       "[943 rows x 9 columns]"
+       "       Bus Factor  \n",
+       "count  943.000000  \n",
+       "mean     2.427359  \n",
+       "std      2.518040  \n",
+       "min      1.000000  \n",
+       "25%      1.000000  \n",
+       "50%      2.000000  \n",
+       "75%      3.000000  \n",
+       "max     32.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +161,7 @@
     "    return df\n",
     "\n",
     "df = read_dataset(\"data/result.csv\")\n",
-    "df"
+    "df.describe()"
    ]
   },
   {
